--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "my-qwik-basic-starter",
-  "description": "App with Routing built-in (recommended)",
+  "name": "qwik-todos",
+  "description": "A simple Todo app in Qwik.",
   "engines": {
-    "node": ">=15.0.0"
+    "node": ">=16.0.0"
   },
-  "private": true,
+  "license": "MIT",
   "scripts": {
     "build": "qwik build",
     "build.client": "vite build",
