--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,11 @@
     "isolatedModules": true,
     "outDir": "tmp",
     "noEmit": true,
-    "types": ["node", "vite/client"],
+    "types": [
+      "node",
+      "vite/client",
+      "@cloudflare/workers-types"
+    ],
     "paths": {
       "~/*": ["./src/*"]
     }
