--- a/package.json
+++ b/package.json
@@ -39,5 +39,6 @@
     "vite": "4.1.4",
     "vite-tsconfig-paths": "3.5.0",
     "wrangler": "latest"
-  }
+  },
+  "packageManager": "pnpm@7.27.0"
 }
