--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,7 @@
     "isolatedModules": true,
     "outDir": "tmp",
     "noEmit": true,
-    "types": [
-      "node",
-      "vite/client",
-      "@cloudflare/workers-types"
-    ],
+    "types": ["node", "vite/client", "@cloudflare/workers-types"],
     "paths": {
       "~/*": ["./src/*"]
     }
