Add Azure Static Web Apps adapter

--- a/package.json
+++ b/package.json
@@ -6,28 +6,36 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "qwik build",
+    "build": "npm run build.client && npm run build.azure && npm run build.cloudflare",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/cloudflare-pages/vite.config.ts",
+    "build.azure": "vite build -c adapters/azure-swa/vite.config.ts",
+    "build.cloudflare": "vite build -c adapters/cloudflare-pages/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
-    "deploy": "wrangler pages dev ./dist --persist",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
+    "serve.azure": "swa start",
+    "serve.cloudflare": "wrangler pages dev ./dist --persist",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
+  "dependencies": {
+    "uuid": "9.0.0"
+  },
   "devDependencies": {
+    "@azure/functions": "3.5.0",
+    "@azure/static-web-apps-cli": "1.0.6",
     "@builder.io/qwik": "0.21.0",
     "@builder.io/qwik-city": "0.5.3",
-    "@cloudflare/workers-types": "^4.20230228.0",
+    "@cloudflare/workers-types": "4.20230307.0",
     "@types/eslint": "8.21.1",
-    "@types/node": "^18.14.0",
+    "@types/node": "18.15.0",
     "@types/node-fetch": "latest",
+    "@types/uuid": "9.0.1",
     "@typescript-eslint/eslint-plugin": "5.54.1",
     "@typescript-eslint/parser": "5.54.1",
     "eslint": "8.35.0",
