--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "qwik": "qwik"
   },
   "dependencies": {
+    "@azure/data-tables": "13.2.1",
     "uuid": "9.0.0"
   },
   "devDependencies": {
