--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "npm run build.client && npm run build.azure && npm run build.cloudflare",
+    "build": "echo 'Run build.azure or build.cloudflare' && false",
+    "build.azure": "npm-run-all build.client build.server.azure --parallel lint fmt.check build.types",
+    "build.cloudflare": "npm-run-all build.client build.server.cloudflare --parallel lint fmt.check build.types",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.azure": "vite build -c adapters/azure-swa/vite.config.ts",
-    "build.cloudflare": "vite build -c adapters/cloudflare-pages/vite.config.ts",
+    "build.server.azure": "vite build -c adapters/azure-swa/vite.config.ts",
+    "build.server.cloudflare": "vite build -c adapters/cloudflare-pages/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
@@ -42,6 +44,7 @@
     "eslint": "8.39.0",
     "eslint-plugin-qwik": "0.105.0",
     "node-fetch": "3.3.1",
+    "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
     "typescript": "5.0.4",
     "undici": "5.22.0",
