--- a/swa-cli.config.json
+++ b/swa-cli.config.json
@@ -2,10 +2,8 @@
   "$schema": "https://aka.ms/azure/static-web-apps-cli/schema",
   "configurations": {
     "qwik-app": {
-      "appLocation": ".",
-      "apiLocation": "./azure-functions",
-      "outputLocation": "./dist",
-      "appBuildCommand": "npm run build"
+      "appLocation": "./dist",
+      "apiLocation": "./azure-functions"
     }
   }
 }
