--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server.azure": "vite build -c adapters/azure-swa/vite.config.ts",
     "build.server.cloudflare": "vite build -c adapters/cloudflare-pages/vite.config.ts",
+    "build.server.deno": "vite build -c adapters/deno/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
@@ -22,6 +23,7 @@
     "preview": "qwik build preview && vite preview --open",
     "serve.azure": "swa start",
     "serve.cloudflare": "wrangler pages dev ./dist --persist",
+    "serve.deno": "deno run --allow-net --allow-read --allow-env server/entry.deno.js",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
