--- a/.github/workflows/deploy-to-deno.yml
+++ b/.github/workflows/deploy-to-deno.yml
@@ -10,8 +10,8 @@ on:
       - main
 
 permissions:
+  id-token: write # Needed for auth with Deno Deploy
   contents: read
-  pull-requests: write
 
 jobs:
   publish:
