--- a/package.json
+++ b/package.json
@@ -32,25 +32,25 @@
   "devDependencies": {
     "@azure/functions": "3.5.1",
     "@azure/static-web-apps-cli": "1.1.1",
-    "@builder.io/qwik": "0.105.0",
-    "@builder.io/qwik-city": "0.105.0",
+    "@builder.io/qwik": "0.107.0",
+    "@builder.io/qwik-city": "0.107.0",
     "@cloudflare/workers-types": "4.20230404.0",
     "@types/eslint": "8.37.0",
-    "@types/node": "18.15.11",
-    "@types/node-fetch": "latest",
+    "@types/node": "18.16.3",
+    "@types/node-fetch": "2.6.3",
     "@types/uuid": "9.0.1",
-    "@typescript-eslint/eslint-plugin": "5.59.1",
-    "@typescript-eslint/parser": "5.59.1",
+    "@typescript-eslint/eslint-plugin": "5.59.2",
+    "@typescript-eslint/parser": "5.59.2",
     "eslint": "8.39.0",
-    "eslint-plugin-qwik": "0.105.0",
+    "eslint-plugin-qwik": "0.107.0",
     "node-fetch": "3.3.1",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
     "typescript": "5.0.4",
     "undici": "5.22.0",
-    "vite": "4.3.3",
+    "vite": "4.3.4",
     "vite-tsconfig-paths": "4.2.0",
-    "wrangler": "latest"
+    "wrangler": "2.18.0"
   },
   "packageManager": "pnpm@8.3.1"
 }
