--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,11 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base", "group:allNonMajor"]
+  "extends": ["config:base", "group:allNonMajor"],
+  "packageRules": [
+    {
+      "matchPackagePatterns": ["^@builder.io/qwik", "^eslint-plugin-qwik"],
+      "groupName": "Qwik",
+      "groupSlug": "qwik"
+    }
+  ]
 }
