--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@typescript-eslint/eslint-plugin": "8.24.1",
     "@typescript-eslint/parser": "8.24.1",
     "eslint": "9.21.0",
-    "eslint-plugin-qwik": "1.12.1",
+    "eslint-plugin-qwik": "2.0.0-alpha.7",
     "node-fetch": "3.3.2",
     "npm-run-all2": "7.0.2",
     "prettier": "3.5.2",
